# MOON_CMS

./: README.md
backend/: .coverage  .env  .env.prod  .env.prod.db  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/accounts/: managers.py  models.py  urls.py
backend/api/: forms.py  serializers.py  urls.py  views.py
backend/cart/: admin.py  models.py  serializers.py
backend/core/: settings.py  urls.py
backend/htmlcov/: _venv_lib_python3_8_site-packages_asgiref___init___py.html  _venv_lib_python3_8_site-packages_asgiref_current_thread_executor_py.html  _venv_lib_python3_8_site-packages_asgiref_local_py.html  _venv_lib_python3_8_site-packages_asgiref_sync_py.html  _venv_lib_python3_8_site-packages_corsheaders___init___py.html  _venv_lib_python3_8_site-packages_corsheaders_checks_py.html  _venv_lib_python3_8_site-packages_corsheaders_conf_py.html  _venv_lib_python3_8_site-packages_corsheaders_defaults_py.html  _venv_lib_python3_8_site-packages_dj_database_url_py.html  _venv_lib_python3_8_site-packages_django___init___py.html  _venv_lib_python3_8_site-packages_django_apps___init___py.html  _venv_lib_python3_8_site-packages_django_apps_config_py.html  _venv_lib_python3_8_site-packages_django_apps_registry_py.html  _venv_lib_python3_8_site-packages_django_conf___init___py.html  _venv_lib_python3_8_site-packages_django_conf_global_settings_py.html  _venv_lib_python3_8_site-packages_django_conf_locale___init___py.html  _venv_lib_python3_8_site-packages_django_contrib___init___py.html  (+392 more)
backend/products/: admin.py  models.py  (+3 more)
(+127 files in other folders)
